fix: pages were not scrollable and overlapped with the header

--- a/apps/app/src/react/components/pages/newRundownPage/newRundownPage.scss
+++ b/apps/app/src/react/components/pages/newRundownPage/newRundownPage.scss
@@ -1,6 +1,11 @@
 @import '../../../styles/foundation/all';
 
 .new-rundown-page {
+	position: absolute;
+	top: $top-header-height;
+	left: 0;
+	right: 0;
+	bottom: 0;
 	display: flex;
 	align-items: center;
 
