--- a/apps/app/src/react/styles/app.scss
+++ b/apps/app/src/react/styles/app.scss
@@ -30,8 +30,6 @@
 	right: 0;
 	background: $mainBg;
 
-	$top-header-height: 5rem;
-
 	> .header-bar {
 		position: absolute;
 		top: 0;
