--- a/apps/app/src/react/styles/foundation/_variables.scss
+++ b/apps/app/src/react/styles/foundation/_variables.scss
@@ -15,3 +15,4 @@ $sidebar-padding: 1rem;
 $default-transition: all 150ms ease;
 $default-transition-time: 150ms ease;
 $timelineObjHandleWidth: 8px;
+$top-header-height: 5rem;
